<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.vaibhav.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamTitleTextStyle"
                    android:text="@string/team_a" />

                <TextView
                    style="@style/ScoreTextStyle"
                    android:text="@string/zero" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        style="@style/FoulTitleStyle"
                        android:text="@string/foul" />

                    <TextView
                        style="@style/FoulCountStyle"
                        android:text="@string/zero" />

                    <Button
                        style="@style/FoulButtonStyle"
                        android:text="@string/foul" />
                </LinearLayout>

                <Button
                    style="@style/ButtonStyle"
                    android:text="@string/plus_three_points" />

                <Button
                    style="@style/ButtonStyle"
                    android:text="@string/plus_two_points" />

                <Button
                    style="@style/ButtonStyle"
                    android:text="@string/plus_one_point" />

                <Button
                    style="@style/ButtonStyle"
                    android:text="@string/free_throw" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamTitleTextStyle"
                    android:text="@string/team_b" />

                <TextView
                    style="@style/ScoreTextStyle"
                    android:text="@string/zero" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        style="@style/FoulTitleStyle"
                        android:text="@string/foul" />

                    <TextView
                        style="@style/FoulCountStyle"
                        android:text="@string/zero" />

                    <Button
                        style="@style/FoulButtonStyle"
                        android:text="@string/foul" />
                </LinearLayout>

                <Button
                    style="@style/ButtonStyle"
                    android:text="@string/plus_three_points" />

                <Button
                    style="@style/ButtonStyle"
                    android:text="@string/plus_two_points" />

                <Button
                    style="@style/ButtonStyle"
                    android:text="@string/plus_one_point" />

                <Button
                    style="@style/ButtonStyle"
                    android:text="@string/free_throw" />
            </LinearLayout>

        </LinearLayout>

        <Button
            style="@style/ResetButtonStyle"
            android:text="Reset" />
    </LinearLayout>

</ScrollView>
